client/src/standalone/player/src/sass/shared/control-bar.scss
/* ... */
// ---------------------------------------------------------------------------
// Lucide theme
// ---------------------------------------------------------------------------

.video-js.vjs-peertube-theme-lucide {
  .vjs-control-bar {
    --first-last-element-margin: 1rem;
    --control-bar-height: 3.5rem;
    --icon-size: 1.375rem; // 22px
    --button-width: 2.25rem;

    font-family: Roboto, "helvetica neue", "segoe ui", arial, sans-serif;
    background: linear-gradient(to bottom, hsl(0 0% 0% / 0) 0%, hsl(0 0% 0%) 100%);

    .vjs-play-control {
      width: var(--button-width);
    }

    .vjs-play-control:not(.vjs-paused) {
      @include inject-icon("./svg/theme-lucide/pause-lucide.svg", var(--icon-size));
    }

    .vjs-play-control.vjs-paused:not(.vjs-ended) {
      @include inject-icon("./svg/theme-lucide/play-lucide.svg", var(--icon-size));
    }

    .vjs-play-control.vjs-paused.vjs-ended {
      @include inject-icon("./svg/theme-lucide/restart-lucide.svg", var(--icon-size));
    }

    .vjs-peertube {
      display: none;
    }

    .vjs-settings {
      @include update-icon("./svg/theme-lucide/settings-lucide.svg", var(--icon-size));
    }

    .vjs-fullscreen-control {
      @include update-icon("./svg/theme-lucide/open-fullscreen-lucide.svg", var(--icon-size));
    }

    .vjs-caption-toggle-control:not(.enabled) {
      @include inject-icon("./svg/theme-lucide/cc-disabled-lucide.svg", var(--icon-size));
    }

    .vjs-caption-toggle-control.enabled {
      @include inject-icon("./svg/theme-lucide/cc-enabled-lucide.svg", var(--icon-size));
    }

    .vjs-mute-control {
      @include inject-icon("./svg/theme-lucide/volume-lucide.svg", var(--icon-size));
    }

    .vjs-mute-control.vjs-vol-2 {
      @include update-icon("./svg/theme-lucide/volume-2-lucide.svg", var(--icon-size));
    }

    .vjs-mute-control.vjs-vol-1 {
      @include update-icon("./svg/theme-lucide/volume-1-lucide.svg", var(--icon-size));
    }

    .vjs-mute-control.vjs-vol-0 {
      @include update-icon("./svg/theme-lucide/volume-0-lucide.svg", var(--icon-size));
    }

    .vjs-progress-control {
      .vjs-slider,
      .vjs-load-progress,
      .vjs-play-progress {
        border-radius: 8px;
      }
    }

    .vjs-next-video,
    .vjs-previous-video {
      @include update-icon("./svg/theme-lucide/next-lucide.svg", var(--icon-size));
    }

    .vjs-pt-live-control {
      margin: auto var(--button-implicit-padding-x);
      line-height: var(--control-bar-height);

      @include margin-right(auto);

      .vjs-live-display::before {
        width: 8px;
        height: 8px;
        border-radius: 8px;
        content: "";
        display: inline-block;
        position: relative;
        top: -1px;

        @include margin-right(5px);
      }

      &.synced-with-live-edge .vjs-live-display::before {
        background: rgba(225, 0, 45);
      }

      &:not(.synced-with-live-edge) .vjs-live-display::before {
        background: #80807f;
      }
    }
  }

  &.vjs-live:not(.vjs-live-dvr) {
    // Take the available space for the control bar
    .vjs-progress-control {
      display: flex;
      visibility: hidden;
    }
  }

  &.vjs-fullscreen .vjs-control-bar {
    --control-bar-height: 60px;
    --icon-size: 1.625rem; // 26px;
    --button-width: 2.5rem;
    --control-bar-font-size: 1rem;
  }
}

.video-js.vjs-peertube-theme-lucide.vjs-fullscreen .vjs-control-bar {
  .vjs-fullscreen-control {
    @include update-icon("./svg/theme-lucide/close-fullscreen-lucide.svg", var(--icon-size));
  }
}

.video-js.vjs-peertube-theme-lucide.vjs-size-570 .vjs-control-bar {
  --first-last-element-margin: 10px;
}

// ---------------------------------------------------------------------------
// Custom media queries
// ---------------------------------------------------------------------------

.video-js.vjs-peertube-skin.vjs-size-750 .vjs-control-bar {
  .vjs-theater-control {
    display: none;
  }
}

.video-js.vjs-peertube-skin.vjs-size-570 .vjs-control-bar {
  .vjs-mute-control {
    @include margin(0, 4px, 0, 4px);
  }

  .vjs-peertube {
    padding: 0 !important;

    .vjs-peertube-displayed {
      display: none !important;
    }

    .icon,
    .download-speed-text,
    .upload-speed-text {
      display: none !important;
    }
  }

  .vjs-peertube-link {
    max-width: 100px;
  }

  &.vjs-live:not(.vjs-live-dvr) {
    .vjs-duration {
      display: none !important;
    }

    .vjs-peertube {
      display: none !important;
    }
  }
}

.video-js.vjs-peertube-skin.vjs-size-350 .vjs-control-bar {
  --first-last-element-margin: 7px;

  .vjs-next-video,
  .vjs-previous-video {
    display: none !important;
  }

  .vjs-peertube-link {
    display: none !important;
  }

  .vjs-play-control {
    width: 30px;

    @include margin-left(0);
  }

  &.vjs-live:not(.vjs-live-dvr) {
    .vjs-current-time {
      display: none !important;
    }
  }
}

